--- a/index.html
+++ b/index.html
@@ -124,7 +124,39 @@
     <script src="js/billiard-physics.min.js"></script>
     <script src="js/phaser-input.min.js"></script>
     <script src="js/ifvisible.min.js"></script>
+    <script src="js/audio-manager.js"></script>
+    <script src="js/game.js"></script>
     <script src="js/mini-billar.min.js"></script>
+    <script src="js/game-manager.js"></script>
+    <script src="js/game-vars.js"></script>
+    <script src="js/rewards-manager.js"></script>
+    <script src="js/boot.js"></script>
+    <script src="js/switch-button.js"></script>
+    <script src="js/equipment-state.js"></script>
+    <script src="js/rail.js"></script>
+    <script src="js/lobby-state.js"></script>
+    <script src="js/avatar.js"></script>
+    <script src="js/avatar-full-body-container.js"></script>
+    <script src="js/name-input-layer.js"></script>
+    <script src="js/player-registering-state.js"></script>
+    <script src="js/animated-star-box.js"></script>
+    <script src="js/cue-container.js"></script>
+    <script src="js/debug-object-container.js"></script>
+    <script src="js/gift-box.js"></script>
+    <script src="js/guide-container.js"></script>
+    <script src="js/pocketed-balls-trails.js"></script>
+    <script src="js/pool-state.js"></script>
+    <script src="js/stage-container.js"></script>
+    <script src="js/ball.js"></script>
+    <script src="js/ball-object.js"></script>
+    <script src="js/balls-container.js"></script>
+    <script src="js/cue-ball-object.js"></script>
+    <script src="js/cue-ball-spin-button.js"></script>
+    <script src="js/force-setting-container.js"></script>
+    <script src="js/splash-state.js"></script>
+    <script src="js/setting-layer.js"></script>
+    <script src="js/player-avatar-container.js"></script>
+    <script src="js/app.js"></script>
 
     <script
       async
